Adjust alignment issues for image/content

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+
 }
 
 img {
@@ -10,7 +11,33 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  padding: 0 0 32px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 52px;
+}
+
+.plant {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.text {
+  text-align: center;
+  flex-wrap: wrap;
+}
+
 
 /* do not edit this footer */
 .footer {
